--- a/style.css
+++ b/style.css
@@ -1,1 +1,15 @@
+body{
+    background-color:
+    }
 
+    h1{
+        color: ;
+        font-family: ;
+        background: ;
+        }
+        p{
+            color: ;
+            font-family: ;
+            font-size: ;
+            background: ;
+            }
