--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body{
-    background-color:
+    background-color:#CD5C5C
     }
 
     h1{
-        color: ;
+        color:#C71585 ;
         font-family: ;
         background: ;
         }
         p{
-            color: ;
+            color:#8B008B ;
             font-family: ;
             font-size: ;
             background: ;
