--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ body{
     }
 
     h1{
-        color:#C71585 ;
+        color: ;
         font-family: ;
         background: ;
         }
         p{
-            color:#8B008B ;
+            color:black ;
             font-family: ;
             font-size: ;
             background: ;
