--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@ body{
     }
 
     h1{
-        color: ;
+        color:#8B008B ;
         font-family: ;
         background: ;
+        text-align: center;
         }
         p{
             color:black ;
             font-family: ;
             font-size: ;
             background: ;
+            text-align: center;
             }
