--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@ body{
             background: ;
             text-align: center;
             }
+        id{
+            color: #808080;
+            text-align: center;
+        }    
