--- a/style.css
+++ b/style.css
@@ -16,6 +16,6 @@ body{
             text-align: center;
             }
         id{
-            color: #808080;
+            color: black;
             text-align: center;
         }    
