--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
         p{
             color:black ;
             font-family: ;
-            font-size: ;
+            font: size 20px; ;
             background: ;
             text-align: center;
             }
