--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
         p{
             color:black ;
             font-family: ;
-            font-size: 50px
+            font-size:20PX;
             background: ;
             text-align: center;
             }
