--- a/produtos.css
+++ b/produtos.css
@@ -1,1 +1,24 @@
+body{
+    background-color:#CD5C5C
+    }
 
+    h1{
+        color:#8B008B ;
+        font-family: ;
+        background: ;
+        text-align: center;
+        }
+        p{
+            color:black ;
+            font-family: ;
+            font-size:25PX;
+            background: ;
+            text-align: center;
+            }
+        id{
+            color: black;
+            
+        }    
+        #sorveteria1 {
+            width: 100%;
+            {
