--- a/produtos.css
+++ b/produtos.css
@@ -19,6 +19,6 @@ body{
             color: black;
             
         }    
-        #sorveteria1 {
+        #produtos {
             width: 100%;
             {
